<resources>
    <string name="app_name">Story App</string>

    <string name="label_user">Hay, %1$s!</string>

    <string name="welcome">Welcome to Bot Story</string>

    //List Story User
    <string name="content_avatar">Default Avatar Image</string>
    <string name="content_image_story">User Image Story</string>
    <string name="const_name_person" translatable="false">Skyla Pajula</string>

    //Detail Story
    <string name="story_detail">Story Details</string>

    //Login-Register
    <string name="error_dialog_title">Sorry, something wrong</string>
    <string name="error_name_empty">Please enter your name!</string>
    <string name="error_email_empty">Please enter your email!</string>
    <string name="error_email_invalid">Invalid e-mail!</string>
    <string name="error_password_empty">Please enter your password!</string>
    <string name="error_password_8_character">Password must be more than 8 characters</string>
    <string name="desc_welcome">Do you want to write a story about your learning experience at Dicoding? Come on, log in first!</string>
    <string name="title_email">Email</string>
    <string name="title_password">Password</string>
    <string name="button_login">Login</string>
    <string name="havent_account">Dont have an account ?</string>
    <string name="register_here">Sign up now!</string>
    <string name="copyright_app">© 2023 Tsaniya</string>
    <string name="incorrect_message">Email or Password wrong</string>
    <string name="message_unknown_state">Unknown State</string>
    <string name="desc_register">Complete your data below!</string>
    <string name="title_name">Name</string>
    <string name="button_register">Register</string>
    <string name="have_account">Already have an account ?</string>
    <string name="login_here">Sign in now!</string>
    <string name="message_success_register">Registration successful!</string>

    //Add Story
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="desc_hint">Enter description here ...</string>
    <string name="upload_story">Send Story</string>
    <string name="choose_picture">Select Image</string>
    <string name="new_story">Add New Stories</string>
    <string name="error_empty_desc">Description cannot be empty</string>
    <string name="success_upload">Successfully uploaded</string>
    <string name="info_upload">Info Upload</string>
    <string name="message">Information</string>
    <string name="image_pick">Select Image</string>
    <string name="not_permissions">Not getting permission</string>

    //Profile
    <string name="username">Username</string>
    <string name="email">Username@gmail.com</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="confirm_logout">Are you sure you want to leave ?</string>
    <string name="cancel">Cancel</string>
    <string name="description">Deskripsi Deskripsi Deskripsi Deskripsi Deskripsi Deskripsi Deskripsi Deskripsi Deskripsi Deskripsi Deskripsi Deskripsi Deskripsi</string>

    //Kamera
    <string name="failed_picture">Failed to take picture</string>

    //Setting Menu
    <string name="setting">Setting</string>

    //Widget
    <string name="widget_name">STORY APP BANNER</string>
    <string name="text_empty">No Data</string>
    <string name="app_widget_description">Story App Image Banner Widget</string>

    //Maps
    <string name="title_activity_maps">Maps Activity</string>
    <string name="maps">Maps</string>

    //LoadingPaging3
    <string name="data_notLoaded">Data not loaded</string>
    <string name="retry">Retry</string>

    //Choose Maps
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
</resources>