<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlueWhite"
    tools:context=".point.profil.ProfileActivity">

    <ImageView
        android:id="@+id/profileImg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/bot"
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/colorBlueDark"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="@+id/profileImg"
        app:layout_constraintStart_toEndOf="@+id/profileImg"/>

    <TextView
        android:id="@+id/tvEmailUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginTop="4dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tvUsername"
        app:layout_constraintStart_toEndOf="@+id/profileImg"/>

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/logout"
        android:textStyle="bold"
        android:textColor="@color/colorBlueWhite"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/profileImg"/>
</androidx.constraintlayout.widget.ConstraintLayout>