<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlueWhite"
    tools:context=".point.story.add.StoryAddActivity">

    <ImageView
        android:id="@+id/previewImg"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:src="@drawable/ic_image_24dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/btnLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/previewImg"
        app:layout_constraintBottom_toTopOf="@+id/editDescStory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnCamera"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:background="@drawable/button_add_story"
            android:text="@string/camera"
            android:textColor="@color/colorBlueWhite"
            android:layout_marginHorizontal="32dp"
            android:layout_marginStart="0dp"
            android:translationZ="0dp"/>

        <Button
            android:id="@+id/btnGallery"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:background="@drawable/button_add_story"
            android:text="@string/gallery"
            android:textColor="@color/colorBlueWhite"
            android:layout_marginHorizontal="32dp"
            android:layout_marginStart="15dp"
            android:translationZ="0dp"/>
    </LinearLayout>

    <EditText
        android:id="@+id/editDescStory"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/edit_text_addstory"
        android:hint="@string/desc_hint"
        android:inputType="textMultiLine"
        android:gravity="top|start"
        android:padding="16dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintTop_toBottomOf="@id/btnLayout"
        app:layout_constraintBottom_toTopOf="@+id/btnUnggah"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnUnggah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_story"
        android:background="@drawable/button_add_story"
        android:textColor="@color/colorBlueWhite"
        android:textStyle="bold"
        android:translationZ="0dp"
        android:layout_marginBottom="15dp"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="invisible"/>

    <View
        android:id="@+id/background_dim"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:elevation="2dp"
        android:background="@color/colorBlackDim"/>
</androidx.constraintlayout.widget.ConstraintLayout>