<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="15dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/custom_container_story">

    <ImageView
        android:id="@+id/image_story"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/content_image_story"
        android:scaleType="centerCrop"
        android:transitionName="story_image"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toTopOf="@+id/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/content_avatar"
        android:transitionName="user_avatar"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/bot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_story"/>

    <TextView
        android:id="@+id/name_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/const_name_person"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:transitionName="user_name"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="20dp"
        android:paddingBottom="5dp"
        app:layout_constraintTop_toBottomOf="@id/name_story"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvDescStory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/lorem/random"
            android:maxLines="3"
            android:ellipsize="end"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="40dp"/>

        <TextView
            android:id="@+id/tvDateStory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="20 Mei 2023"
            android:ellipsize="end"
            android:layout_marginTop="8dp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>